# PhysX

./: .gitignore  CMakeLists.txt  CMakePresets.json
physx/: CMakeLists.txt
physx/include/foundation/: PxAoS.h  PxMath.h  PxPreprocessor.h
physx/include/foundation/unix/sse2/: PxUnixSse2AoS.h
physx/source/foundation/unix/: FdUnixFPU.cpp  FdUnixThread.cpp
physx/source/foundation/windows/: FdWindowsThread.cpp
physx/source/physxmetadata/core/include/: PxAutoGeneratedMetaDataObjects.h
physx/source/physxmetadata/extensions/include/: PxExtensionAutoGeneratedMetaDataObjects.h
physx/source/physxvehicle/src/physxmetadata/include/: PxVehicleAutoGeneratedMetaDataObjects.h
