set(PLATFORM_SPECIFIC_SOURCES "")

if (UNIX)
    set(PLATFORM_SPECIFIC_SOURCES
            source/foundation/unix/FdUnixAtomic.cpp
            source/foundation/unix/FdUnixFPU.cpp
            source/foundation/unix/FdUnixMutex.cpp
            source/foundation/unix/FdUnixPrintString.cpp
            source/foundation/unix/FdUnixSList.cpp
            source/foundation/unix/FdUnixSocket.cpp
            source/foundation/unix/FdUnixSync.cpp
            source/foundation/unix/FdUnixThread.cpp
            source/foundation/unix/FdUnixTime.cpp
    )
elseif (WIN32)
    set(PLATFORM_SPECIFIC_SOURCES
            source/foundation/windows/FdWindowsAtomic.cpp
            source/foundation/windows/FdWindowsFPU.cpp
            source/foundation/windows/FdWindowsMutex.cpp
            source/foundation/windows/FdWindowsPrintString.cpp
            source/foundation/windows/FdWindowsSList.cpp
            source/foundation/windows/FdWindowsSocket.cpp
            source/foundation/windows/FdWindowsSync.cpp
            source/foundation/windows/FdWindowsThread.cpp
            source/foundation/windows/FdWindowsTime.cpp
            source/common/src/windows/CmWindowsDelayLoadHook.cpp
            source/common/src/windows/CmWindowsModuleUpdateLoader.cpp
            source/physx/src/device/windows/PhysXIndicatorWindows.cpp
            source/physx/src/windows/NpWindowsDelayLoadHook.cpp
            source/physxcooking/src/windows/WindowsCookingDelayLoadHook.cpp
    )
endif ()

add_library(PhysX STATIC
        source/common/src/CmCollection.cpp
        source/common/src/CmPtrTable.cpp
        source/common/src/CmRadixSort.cpp
        source/common/src/CmSerialize.cpp
        source/common/src/CmVisualization.cpp
        source/foundation/FdAllocator.cpp
        source/foundation/FdAssert.cpp
        source/foundation/FdFoundation.cpp
        source/foundation/FdMathUtils.cpp
        source/foundation/FdString.cpp
        source/foundation/FdTempAllocator.cpp
        source/geomutils/src/GuAABBPruner.cpp
        source/geomutils/src/GuAABBTree.cpp
        source/geomutils/src/GuAABBTreeUpdateMap.cpp
        source/geomutils/src/GuActorShapeMap.cpp
        source/geomutils/src/GuBVH.cpp
        source/geomutils/src/GuBounds.cpp
        source/geomutils/src/GuBox.cpp
        source/geomutils/src/GuBucketPruner.cpp
        source/geomutils/src/GuCCTSweepTests.cpp
        source/geomutils/src/GuCapsule.cpp
        source/geomutils/src/GuCookingSDF.cpp
        source/geomutils/src/GuExtendedBucketPruner.cpp
        source/geomutils/src/GuFactory.cpp
        source/geomutils/src/GuGeometryQuery.cpp
        source/geomutils/src/GuGjkQuery.cpp
        source/geomutils/src/GuIncrementalAABBPruner.cpp
        source/geomutils/src/GuIncrementalAABBPrunerCore.cpp
        source/geomutils/src/GuIncrementalAABBTree.cpp
        source/geomutils/src/GuInternal.cpp
        source/geomutils/src/GuMTD.cpp
        source/geomutils/src/GuMaverickNode.cpp
        source/geomutils/src/GuMeshFactory.cpp
        source/geomutils/src/GuMetaData.cpp
        source/geomutils/src/GuOverlapTests.cpp
        source/geomutils/src/GuPruningPool.cpp
        source/geomutils/src/GuQuerySystem.cpp
        source/geomutils/src/GuRaycastTests.cpp
        source/geomutils/src/GuSAH.cpp
        source/geomutils/src/GuSDF.cpp
        source/geomutils/src/GuSecondaryPruner.cpp
        source/geomutils/src/GuSqInternal.cpp
        source/geomutils/src/GuSweepMTD.cpp
        source/geomutils/src/GuSweepSharedTests.cpp
        source/geomutils/src/GuSweepTests.cpp
        source/geomutils/src/GuWindingNumber.cpp
        source/geomutils/src/ccd/GuCCDSweepConvexMesh.cpp
        source/geomutils/src/ccd/GuCCDSweepPrimitives.cpp
        source/geomutils/src/common/GuAdjacencies.cpp
        source/geomutils/src/common/GuBarycentricCoordinates.cpp
        source/geomutils/src/common/GuEdgeList.cpp
        source/geomutils/src/common/GuMeshAnalysis.cpp
        source/geomutils/src/common/GuMeshCleaner.cpp
        source/geomutils/src/common/GuQuantizer.cpp
        source/geomutils/src/common/GuSeparatingAxes.cpp
        source/geomutils/src/common/GuVertexReducer.cpp
        source/geomutils/src/contact/GuContactBoxBox.cpp
        source/geomutils/src/contact/GuContactCapsuleBox.cpp
        source/geomutils/src/contact/GuContactCapsuleCapsule.cpp
        source/geomutils/src/contact/GuContactCapsuleConvex.cpp
        source/geomutils/src/contact/GuContactCapsuleMesh.cpp
        source/geomutils/src/contact/GuContactConvexConvex.cpp
        source/geomutils/src/contact/GuContactConvexMesh.cpp
        source/geomutils/src/contact/GuContactCustomGeometry.cpp
        source/geomutils/src/contact/GuContactPlaneBox.cpp
        source/geomutils/src/contact/GuContactPlaneCapsule.cpp
        source/geomutils/src/contact/GuContactPlaneConvex.cpp
        source/geomutils/src/contact/GuContactPolygonPolygon.cpp
        source/geomutils/src/contact/GuContactSphereBox.cpp
        source/geomutils/src/contact/GuContactSphereCapsule.cpp
        source/geomutils/src/contact/GuContactSphereMesh.cpp
        source/geomutils/src/contact/GuContactSpherePlane.cpp
        source/geomutils/src/contact/GuContactSphereSphere.cpp
        source/geomutils/src/contact/GuFeatureCode.cpp
        source/geomutils/src/convex/GuBigConvexData.cpp
        source/geomutils/src/convex/GuConvexHelper.cpp
        source/geomutils/src/convex/GuConvexMesh.cpp
        source/geomutils/src/convex/GuConvexSupportTable.cpp
        source/geomutils/src/convex/GuConvexUtilsInternal.cpp
        source/geomutils/src/convex/GuHillClimbing.cpp
        source/geomutils/src/convex/GuShapeConvex.cpp
        source/geomutils/src/cooking/GuCookingBVH.cpp
        source/geomutils/src/cooking/GuCookingBigConvexDataBuilder.cpp
        source/geomutils/src/cooking/GuCookingConvexHullBuilder.cpp
        source/geomutils/src/cooking/GuCookingConvexHullLib.cpp
        source/geomutils/src/cooking/GuCookingConvexHullUtils.cpp
        source/geomutils/src/cooking/GuCookingConvexMesh.cpp
        source/geomutils/src/cooking/GuCookingConvexMeshBuilder.cpp
        source/geomutils/src/cooking/GuCookingConvexPolygonsBuilder.cpp
        source/geomutils/src/cooking/GuCookingHF.cpp
        source/geomutils/src/cooking/GuCookingQuickHullConvexHullLib.cpp
        source/geomutils/src/cooking/GuCookingTetrahedronMesh.cpp
        source/geomutils/src/cooking/GuCookingTriangleMesh.cpp
        source/geomutils/src/cooking/GuCookingVolumeIntegration.cpp
        source/geomutils/src/cooking/GuRTreeCooking.cpp
        source/geomutils/src/distance/GuDistancePointBox.cpp
        source/geomutils/src/distance/GuDistancePointTetrahedron.cpp
        source/geomutils/src/distance/GuDistancePointTriangle.cpp
        source/geomutils/src/distance/GuDistanceSegmentBox.cpp
        source/geomutils/src/distance/GuDistanceSegmentSegment.cpp
        source/geomutils/src/distance/GuDistanceSegmentTriangle.cpp
        source/geomutils/src/distance/GuDistanceTriangleTriangle.cpp
        source/geomutils/src/gjk/GuEPA.cpp
        source/geomutils/src/gjk/GuGJKSimplex.cpp
        source/geomutils/src/gjk/GuGJKTest.cpp
        source/geomutils/src/hf/GuHeightField.cpp
        source/geomutils/src/hf/GuHeightFieldUtil.cpp
        source/geomutils/src/hf/GuOverlapTestsHF.cpp
        source/geomutils/src/hf/GuSweepsHF.cpp
        source/geomutils/src/intersection/GuIntersectionBoxBox.cpp
        source/geomutils/src/intersection/GuIntersectionCapsuleTriangle.cpp
        source/geomutils/src/intersection/GuIntersectionEdgeEdge.cpp
        source/geomutils/src/intersection/GuIntersectionRayBox.cpp
        source/geomutils/src/intersection/GuIntersectionRayCapsule.cpp
        source/geomutils/src/intersection/GuIntersectionRaySphere.cpp
        source/geomutils/src/intersection/GuIntersectionSphereBox.cpp
        source/geomutils/src/intersection/GuIntersectionTetrahedronBox.cpp
        source/geomutils/src/intersection/GuIntersectionTriangleBox.cpp
        source/geomutils/src/intersection/GuIntersectionTriangleTriangle.cpp
        source/geomutils/src/mesh/GuBV32.cpp
        source/geomutils/src/mesh/GuBV32Build.cpp
        source/geomutils/src/mesh/GuBV4.cpp
        source/geomutils/src/mesh/GuBV4Build.cpp
        source/geomutils/src/mesh/GuBV4_AABBSweep.cpp
        source/geomutils/src/mesh/GuBV4_BoxOverlap.cpp
        source/geomutils/src/mesh/GuBV4_CapsuleSweep.cpp
        source/geomutils/src/mesh/GuBV4_CapsuleSweepAA.cpp
        source/geomutils/src/mesh/GuBV4_MeshMeshOverlap.cpp
        source/geomutils/src/mesh/GuBV4_OBBSweep.cpp
        source/geomutils/src/mesh/GuBV4_Raycast.cpp
        source/geomutils/src/mesh/GuBV4_SphereOverlap.cpp
        source/geomutils/src/mesh/GuBV4_SphereSweep.cpp
        source/geomutils/src/mesh/GuMeshQuery.cpp
        source/geomutils/src/mesh/GuMidphaseBV4.cpp
        source/geomutils/src/mesh/GuMidphaseRTree.cpp
        source/geomutils/src/mesh/GuOverlapTestsMesh.cpp
        source/geomutils/src/mesh/GuRTree.cpp
        source/geomutils/src/mesh/GuRTreeQueries.cpp
        source/geomutils/src/mesh/GuSweepsMesh.cpp
        source/geomutils/src/mesh/GuTetrahedronMesh.cpp
        source/geomutils/src/mesh/GuTetrahedronMeshUtils.cpp
        source/geomutils/src/mesh/GuTriangleMesh.cpp
        source/geomutils/src/mesh/GuTriangleMeshBV4.cpp
        source/geomutils/src/mesh/GuTriangleMeshRTree.cpp
        source/geomutils/src/pcm/GuPCMContactBoxBox.cpp
        source/geomutils/src/pcm/GuPCMContactBoxConvex.cpp
        source/geomutils/src/pcm/GuPCMContactCapsuleBox.cpp
        source/geomutils/src/pcm/GuPCMContactCapsuleCapsule.cpp
        source/geomutils/src/pcm/GuPCMContactCapsuleConvex.cpp
        source/geomutils/src/pcm/GuPCMContactCapsuleHeightField.cpp
        source/geomutils/src/pcm/GuPCMContactCapsuleMesh.cpp
        source/geomutils/src/pcm/GuPCMContactConvexCommon.cpp
        source/geomutils/src/pcm/GuPCMContactConvexConvex.cpp
        source/geomutils/src/pcm/GuPCMContactConvexHeightField.cpp
        source/geomutils/src/pcm/GuPCMContactConvexMesh.cpp
        source/geomutils/src/pcm/GuPCMContactCustomGeometry.cpp
        source/geomutils/src/pcm/GuPCMContactGenBoxConvex.cpp
        source/geomutils/src/pcm/GuPCMContactGenSphereCapsule.cpp
        source/geomutils/src/pcm/GuPCMContactGenUtil.cpp
        source/geomutils/src/pcm/GuPCMContactPlaneBox.cpp
        source/geomutils/src/pcm/GuPCMContactPlaneCapsule.cpp
        source/geomutils/src/pcm/GuPCMContactPlaneConvex.cpp
        source/geomutils/src/pcm/GuPCMContactSphereBox.cpp
        source/geomutils/src/pcm/GuPCMContactSphereCapsule.cpp
        source/geomutils/src/pcm/GuPCMContactSphereConvex.cpp
        source/geomutils/src/pcm/GuPCMContactSphereHeightField.cpp
        source/geomutils/src/pcm/GuPCMContactSphereMesh.cpp
        source/geomutils/src/pcm/GuPCMContactSpherePlane.cpp
        source/geomutils/src/pcm/GuPCMContactSphereSphere.cpp
        source/geomutils/src/pcm/GuPCMShapeConvex.cpp
        source/geomutils/src/pcm/GuPCMTriangleContactGen.cpp
        source/geomutils/src/pcm/GuPersistentContactManifold.cpp
        source/geomutils/src/sweep/GuSweepBoxBox.cpp
        source/geomutils/src/sweep/GuSweepBoxSphere.cpp
        source/geomutils/src/sweep/GuSweepBoxTriangle_FeatureBased.cpp
        source/geomutils/src/sweep/GuSweepBoxTriangle_SAT.cpp
        source/geomutils/src/sweep/GuSweepCapsuleBox.cpp
        source/geomutils/src/sweep/GuSweepCapsuleCapsule.cpp
        source/geomutils/src/sweep/GuSweepCapsuleTriangle.cpp
        source/geomutils/src/sweep/GuSweepSphereCapsule.cpp
        source/geomutils/src/sweep/GuSweepSphereSphere.cpp
        source/geomutils/src/sweep/GuSweepSphereTriangle.cpp
        source/geomutils/src/sweep/GuSweepTriangleUtils.cpp
        source/immediatemode/src/NpImmediateMode.cpp
        source/lowlevel/api/src/px_globals.cpp
        source/lowlevel/common/src/pipeline/PxcContactCache.cpp
        source/lowlevel/common/src/pipeline/PxcContactMethodImpl.cpp
        source/lowlevel/common/src/pipeline/PxcMaterialMethodImpl.cpp
        source/lowlevel/common/src/pipeline/PxcNpBatch.cpp
        source/lowlevel/common/src/pipeline/PxcNpCacheStreamPair.cpp
        source/lowlevel/common/src/pipeline/PxcNpContactPrepShared.cpp
        source/lowlevel/common/src/pipeline/PxcNpMemBlockPool.cpp
        source/lowlevel/common/src/pipeline/PxcNpThreadContext.cpp
        source/lowlevel/software/src/PxsCCD.cpp
        source/lowlevel/software/src/PxsContactManager.cpp
        source/lowlevel/software/src/PxsContext.cpp
        source/lowlevel/software/src/PxsDefaultMemoryManager.cpp
        source/lowlevel/software/src/PxsIslandSim.cpp
        source/lowlevel/software/src/PxsNphaseImplementationContext.cpp
        source/lowlevel/software/src/PxsSimpleIslandManager.cpp
        source/lowlevelaabb/src/BpAABBManager.cpp
        source/lowlevelaabb/src/BpAABBManagerBase.cpp
        source/lowlevelaabb/src/BpBroadPhase.cpp
        source/lowlevelaabb/src/BpBroadPhaseABP.cpp
        source/lowlevelaabb/src/BpBroadPhaseMBP.cpp
        source/lowlevelaabb/src/BpBroadPhaseSap.cpp
        source/lowlevelaabb/src/BpBroadPhaseSapAux.cpp
        source/lowlevelaabb/src/BpBroadPhaseShared.cpp
        source/lowlevelaabb/src/BpBroadPhaseUpdate.cpp
        source/lowlevelaabb/src/BpFiltering.cpp
        source/lowleveldynamics/src/DyAllocator.cpp
        source/lowleveldynamics/src/DyArticulationContactPrep.cpp
        source/lowleveldynamics/src/DyArticulationContactPrepPF.cpp
        source/lowleveldynamics/src/DyArticulationMimicJoint.cpp
        source/lowleveldynamics/src/DyConstraintPartition.cpp
        source/lowleveldynamics/src/DyConstraintSetup.cpp
        source/lowleveldynamics/src/DyConstraintSetupBlock.cpp
        source/lowleveldynamics/src/DyContactPrep.cpp
        source/lowleveldynamics/src/DyContactPrep4.cpp
        source/lowleveldynamics/src/DyContactPrep4PF.cpp
        source/lowleveldynamics/src/DyContactPrepPF.cpp
        source/lowleveldynamics/src/DyDynamics.cpp
        source/lowleveldynamics/src/DyFeatherstoneArticulation.cpp
        source/lowleveldynamics/src/DyFeatherstoneForwardDynamic.cpp
        source/lowleveldynamics/src/DyFeatherstoneInverseDynamic.cpp
        source/lowleveldynamics/src/DyFrictionCorrelation.cpp
        source/lowleveldynamics/src/DyRigidBodyToSolverBody.cpp
        source/lowleveldynamics/src/DySleep.cpp
        source/lowleveldynamics/src/DySolverConstraints.cpp
        source/lowleveldynamics/src/DySolverConstraintsBlock.cpp
        source/lowleveldynamics/src/DySolverControl.cpp
        source/lowleveldynamics/src/DySolverControlPF.cpp
        source/lowleveldynamics/src/DySolverCore.cpp
        source/lowleveldynamics/src/DySolverPFConstraints.cpp
        source/lowleveldynamics/src/DySolverPFConstraintsBlock.cpp
        source/lowleveldynamics/src/DyTGSContactPrep.cpp
        source/lowleveldynamics/src/DyTGSContactPrepBlock.cpp
        source/lowleveldynamics/src/DyTGSDynamics.cpp
        source/lowleveldynamics/src/DyThreadContext.cpp
        source/lowleveldynamics/src/DyThresholdTable.cpp
        source/physx/src/NpActor.cpp
        source/physx/src/NpAggregate.cpp
        source/physx/src/NpArticulationJointReducedCoordinate.cpp
        source/physx/src/NpArticulationLink.cpp
        source/physx/src/NpArticulationMimicJoint.cpp
        source/physx/src/NpArticulationReducedCoordinate.cpp
        source/physx/src/NpArticulationTendon.cpp
        source/physx/src/NpBounds.cpp
        source/physx/src/NpCheck.cpp
        source/physx/src/NpConstraint.cpp
        source/physx/src/NpDebugViz.cpp
        source/physx/src/NpDirectGPUAPI.cpp
        source/physx/src/NpFEMCloth.cpp
        source/physx/src/NpFEMClothMaterial.cpp
        source/physx/src/NpFEMSoftBodyMaterial.cpp
        source/physx/src/NpFactory.cpp
        source/physx/src/NpHairSystem.cpp
        source/physx/src/NpMaterial.cpp
        source/physx/src/NpMetaData.cpp
        source/physx/src/NpPBDMaterial.cpp
        source/physx/src/NpPBDParticleSystem.cpp
        source/physx/src/NpParticleBuffer.cpp
        source/physx/src/NpPhysics.cpp
        source/physx/src/NpPruningStructure.cpp
        source/physx/src/NpPvdSceneClient.cpp
        source/physx/src/NpPvdSceneQueryCollector.cpp
        source/physx/src/NpRigidDynamic.cpp
        source/physx/src/NpRigidStatic.cpp
        source/physx/src/NpScene.cpp
        source/physx/src/NpSceneFetchResults.cpp
        source/physx/src/NpSceneQueries.cpp
        source/physx/src/NpSerializerAdapter.cpp
        source/physx/src/NpShape.cpp
        source/physx/src/NpShapeManager.cpp
        source/physx/src/NpSoftBody.cpp
        source/physx/src/PvdMetaDataPvdBinding.cpp
        source/physx/src/PvdPhysicsClient.cpp
        source/physx/src/device/linux/PhysXIndicatorLinux.cpp
        source/physx/src/gpu/PxGpu.cpp
        source/physx/src/gpu/PxPhysXGpuModuleLoader.cpp
        source/physx/src/omnipvd/NpOmniPvd.cpp
        source/physx/src/omnipvd/NpOmniPvdMetaData.cpp
        source/physx/src/omnipvd/NpOmniPvdRegistrationData.cpp
        source/physx/src/omnipvd/OmniPvdChunkAlloc.cpp
        source/physx/src/omnipvd/OmniPvdPxSampler.cpp
        source/physxcharacterkinematic/src/CctBoxController.cpp
        source/physxcharacterkinematic/src/CctCapsuleController.cpp
        source/physxcharacterkinematic/src/CctCharacterController.cpp
        source/physxcharacterkinematic/src/CctCharacterControllerCallbacks.cpp
        source/physxcharacterkinematic/src/CctCharacterControllerManager.cpp
        source/physxcharacterkinematic/src/CctController.cpp
        source/physxcharacterkinematic/src/CctObstacleContext.cpp
        source/physxcharacterkinematic/src/CctSweptBox.cpp
        source/physxcharacterkinematic/src/CctSweptCapsule.cpp
        source/physxcharacterkinematic/src/CctSweptVolume.cpp
        source/physxcooking/src/Cooking.cpp
        source/physxextensions/src/ExtBroadPhase.cpp
        source/physxextensions/src/ExtCollection.cpp
        source/physxextensions/src/ExtContactJoint.cpp
        source/physxextensions/src/ExtConvexMeshExt.cpp
        source/physxextensions/src/ExtCpuWorkerThread.cpp
        source/physxextensions/src/ExtCustomGeometryExt.cpp
        source/physxextensions/src/ExtCustomSceneQuerySystem.cpp
        source/physxextensions/src/ExtD6Joint.cpp
        source/physxextensions/src/ExtD6JointCreate.cpp
        source/physxextensions/src/ExtDefaultCpuDispatcher.cpp
        source/physxextensions/src/ExtDefaultErrorCallback.cpp
        source/physxextensions/src/ExtDefaultSimulationFilterShader.cpp
        source/physxextensions/src/ExtDefaultStreams.cpp
        source/physxextensions/src/ExtDistanceJoint.cpp
        source/physxextensions/src/ExtExtensions.cpp
        source/physxextensions/src/ExtFixedJoint.cpp
        source/physxextensions/src/ExtGearJoint.cpp
        source/physxextensions/src/ExtGjkQueryExt.cpp
        source/physxextensions/src/ExtJoint.cpp
        source/physxextensions/src/ExtMetaData.cpp
        source/physxextensions/src/ExtParticleClothCooker.cpp
        source/physxextensions/src/ExtParticleExt.cpp
        source/physxextensions/src/ExtPrismaticJoint.cpp
        source/physxextensions/src/ExtPvd.cpp
        source/physxextensions/src/ExtPxStringTable.cpp
        source/physxextensions/src/ExtRackAndPinionJoint.cpp
        source/physxextensions/src/ExtRaycastCCD.cpp
        source/physxextensions/src/ExtRemeshingExt.cpp
        source/physxextensions/src/ExtRevoluteJoint.cpp
        source/physxextensions/src/ExtRigidActorExt.cpp
        source/physxextensions/src/ExtRigidBodyExt.cpp
        source/physxextensions/src/ExtSampling.cpp
        source/physxextensions/src/ExtSceneQueryExt.cpp
        source/physxextensions/src/ExtSceneQuerySystem.cpp
        source/physxextensions/src/ExtSimpleFactory.cpp
        source/physxextensions/src/ExtSmoothNormals.cpp
        source/physxextensions/src/ExtSoftBodyExt.cpp
        source/physxextensions/src/ExtSphericalJoint.cpp
        source/physxextensions/src/ExtSqManager.cpp
        source/physxextensions/src/ExtSqQuery.cpp
        source/physxextensions/src/ExtTetMakerExt.cpp
        source/physxextensions/src/ExtTetrahedronMeshExt.cpp
        source/physxextensions/src/ExtTriangleMeshExt.cpp
        source/physxextensions/src/omnipvd/ExtOmniPvdRegistrationData.cpp
        source/physxextensions/src/omnipvd/OmniPvdPxExtensionsSampler.cpp
        source/physxextensions/src/serialization/Binary/SnBinaryDeserialization.cpp
        source/physxextensions/src/serialization/Binary/SnBinarySerialization.cpp
        source/physxextensions/src/serialization/Binary/SnConvX.cpp
        source/physxextensions/src/serialization/Binary/SnConvX_Align.cpp
        source/physxextensions/src/serialization/Binary/SnConvX_Convert.cpp
        source/physxextensions/src/serialization/Binary/SnConvX_Error.cpp
        source/physxextensions/src/serialization/Binary/SnConvX_MetaData.cpp
        source/physxextensions/src/serialization/Binary/SnConvX_Output.cpp
        source/physxextensions/src/serialization/Binary/SnConvX_Union.cpp
        source/physxextensions/src/serialization/Binary/SnSerializationContext.cpp
        source/physxextensions/src/serialization/SnSerialUtils.cpp
        source/physxextensions/src/serialization/SnSerialization.cpp
        source/physxextensions/src/serialization/SnSerializationRegistry.cpp
        source/physxextensions/src/serialization/Xml/PsFastXml.cpp
        source/physxextensions/src/serialization/Xml/SnJointRepXSerializer.cpp
        source/physxextensions/src/serialization/Xml/SnRepXCoreSerializer.cpp
        source/physxextensions/src/serialization/Xml/SnRepXUpgrader.cpp
        source/physxextensions/src/serialization/Xml/SnXmlSerialization.cpp
        source/physxextensions/src/tet/ExtBVH.cpp
        source/physxextensions/src/tet/ExtDelaunayBoundaryInserter.cpp
        source/physxextensions/src/tet/ExtDelaunayTetrahedralizer.cpp
        source/physxextensions/src/tet/ExtFastWindingNumber.cpp
        source/physxextensions/src/tet/ExtInsideTester.cpp
        source/physxextensions/src/tet/ExtMeshSimplificator.cpp
        source/physxextensions/src/tet/ExtOctreeTetrahedralizer.cpp
        source/physxextensions/src/tet/ExtRemesher.cpp
        source/physxextensions/src/tet/ExtTetSplitting.cpp
        source/physxextensions/src/tet/ExtTetUnionFind.cpp
        source/physxextensions/src/tet/ExtUtilities.cpp
        source/physxextensions/src/tet/ExtVoxelTetrahedralizer.cpp
        source/physxmetadata/core/src/PxAutoGeneratedMetaDataObjects.cpp
        source/physxmetadata/core/src/PxMetaDataObjects.cpp
        source/physxmetadata/extensions/src/PxExtensionAutoGeneratedMetaDataObjects.cpp
        source/physxvehicle/src/PxVehicleComponents.cpp
        source/physxvehicle/src/PxVehicleDrive.cpp
        source/physxvehicle/src/PxVehicleDrive4W.cpp
        source/physxvehicle/src/PxVehicleDriveNW.cpp
        source/physxvehicle/src/PxVehicleDriveTank.cpp
        source/physxvehicle/src/PxVehicleMetaData.cpp
        source/physxvehicle/src/PxVehicleNoDrive.cpp
        source/physxvehicle/src/PxVehicleSDK.cpp
        source/physxvehicle/src/PxVehicleSerialization.cpp
        source/physxvehicle/src/PxVehicleSuspWheelTire4.cpp
        source/physxvehicle/src/PxVehicleTireFriction.cpp
        source/physxvehicle/src/PxVehicleUpdate.cpp
        source/physxvehicle/src/PxVehicleWheels.cpp
        source/physxvehicle/src/VehicleUtilControl.cpp
        source/physxvehicle/src/VehicleUtilSetup.cpp
        source/physxvehicle/src/VehicleUtilTelemetry.cpp
        source/physxvehicle/src/physxmetadata/src/PxVehicleAutoGeneratedMetaDataObjects.cpp
        source/physxvehicle/src/physxmetadata/src/PxVehicleMetaDataObjects.cpp
        source/physxvehicle2/src/commands/VhCommandHelpers.cpp
        source/physxvehicle2/src/drivetrain/VhDrivetrainFunctions.cpp
        source/physxvehicle2/src/drivetrain/VhDrivetrainHelpers.cpp
        source/physxvehicle2/src/physxActor/VhPhysXActorFunctions.cpp
        source/physxvehicle2/src/physxActor/VhPhysXActorHelpers.cpp
        source/physxvehicle2/src/physxConstraints/VhPhysXConstraintFunctions.cpp
        source/physxvehicle2/src/physxConstraints/VhPhysXConstraintHelpers.cpp
        source/physxvehicle2/src/physxRoadGeometry/VhPhysXRoadGeometryFunctions.cpp
        source/physxvehicle2/src/physxRoadGeometry/VhPhysXRoadGeometryHelpers.cpp
        source/physxvehicle2/src/pvd/VhPvdFunctions.cpp
        source/physxvehicle2/src/pvd/VhPvdHelpers.cpp
        source/physxvehicle2/src/pvd/VhPvdWriter.cpp
        source/physxvehicle2/src/rigidBody/VhRigidBodyFunctions.cpp
        source/physxvehicle2/src/steering/VhSteeringFunctions.cpp
        source/physxvehicle2/src/suspension/VhSuspensionFunctions.cpp
        source/physxvehicle2/src/suspension/VhSuspensionHelpers.cpp
        source/physxvehicle2/src/tire/VhTireFunctions.cpp
        source/physxvehicle2/src/tire/VhTireHelpers.cpp
        source/physxvehicle2/src/wheel/VhWheelFunctions.cpp
        source/pvd/src/PxProfileEventImpl.cpp
        source/pvd/src/PxPvd.cpp
        source/pvd/src/PxPvdDataStream.cpp
        source/pvd/src/PxPvdDefaultFileTransport.cpp
        source/pvd/src/PxPvdDefaultSocketTransport.cpp
        source/pvd/src/PxPvdImpl.cpp
        source/pvd/src/PxPvdMemClient.cpp
        source/pvd/src/PxPvdObjectModelMetaData.cpp
        source/pvd/src/PxPvdObjectRegistrar.cpp
        source/pvd/src/PxPvdProfileZoneClient.cpp
        source/pvd/src/PxPvdUserRenderer.cpp
        source/scenequery/src/SqCompoundPruner.cpp
        source/scenequery/src/SqCompoundPruningPool.cpp
        source/scenequery/src/SqFactory.cpp
        source/scenequery/src/SqManager.cpp
        source/scenequery/src/SqQuery.cpp
        source/simulationcontroller/src/ScActorCore.cpp
        source/simulationcontroller/src/ScActorSim.cpp
        source/simulationcontroller/src/ScArticulationCore.cpp
        source/simulationcontroller/src/ScArticulationJointCore.cpp
        source/simulationcontroller/src/ScArticulationJointSim.cpp
        source/simulationcontroller/src/ScArticulationMimicJointSim.cpp
        source/simulationcontroller/src/ScArticulationSim.cpp
        source/simulationcontroller/src/ScArticulationTendonCore.cpp
        source/simulationcontroller/src/ScArticulationTendonJointCore.cpp
        source/simulationcontroller/src/ScArticulationTendonSim.cpp
        source/simulationcontroller/src/ScBodyCore.cpp
        source/simulationcontroller/src/ScBodySim.cpp
        source/simulationcontroller/src/ScBroadphase.cpp
        source/simulationcontroller/src/ScCCD.cpp
        source/simulationcontroller/src/ScConstraintBreakage.cpp
        source/simulationcontroller/src/ScConstraintCore.cpp
        source/simulationcontroller/src/ScConstraintInteraction.cpp
        source/simulationcontroller/src/ScConstraintSim.cpp
        source/simulationcontroller/src/ScElementInteractionMarker.cpp
        source/simulationcontroller/src/ScElementSim.cpp
        source/simulationcontroller/src/ScFEMClothCore.cpp
        source/simulationcontroller/src/ScFEMClothShapeSim.cpp
        source/simulationcontroller/src/ScFEMClothSim.cpp
        source/simulationcontroller/src/ScFiltering.cpp
        source/simulationcontroller/src/ScHairSystemCore.cpp
        source/simulationcontroller/src/ScHairSystemShapeCore.cpp
        source/simulationcontroller/src/ScHairSystemShapeSim.cpp
        source/simulationcontroller/src/ScHairSystemSim.cpp
        source/simulationcontroller/src/ScInteraction.cpp
        source/simulationcontroller/src/ScIterators.cpp
        source/simulationcontroller/src/ScKinematics.cpp
        source/simulationcontroller/src/ScMetaData.cpp
        source/simulationcontroller/src/ScNPhaseCore.cpp
        source/simulationcontroller/src/ScParticleSystemCore.cpp
        source/simulationcontroller/src/ScParticleSystemShapeCore.cpp
        source/simulationcontroller/src/ScParticleSystemShapeSim.cpp
        source/simulationcontroller/src/ScParticleSystemSim.cpp
        source/simulationcontroller/src/ScPhysics.cpp
        source/simulationcontroller/src/ScPipeline.cpp
        source/simulationcontroller/src/ScRigidCore.cpp
        source/simulationcontroller/src/ScRigidSim.cpp
        source/simulationcontroller/src/ScScene.cpp
        source/simulationcontroller/src/ScShapeCore.cpp
        source/simulationcontroller/src/ScShapeInteraction.cpp
        source/simulationcontroller/src/ScShapeSim.cpp
        source/simulationcontroller/src/ScShapeSimBase.cpp
        source/simulationcontroller/src/ScSimStats.cpp
        source/simulationcontroller/src/ScSimulationController.cpp
        source/simulationcontroller/src/ScSleep.cpp
        source/simulationcontroller/src/ScSoftBodyCore.cpp
        source/simulationcontroller/src/ScSoftBodyShapeSim.cpp
        source/simulationcontroller/src/ScSoftBodySim.cpp
        source/simulationcontroller/src/ScSqBoundsManager.cpp
        source/simulationcontroller/src/ScStaticCore.cpp
        source/simulationcontroller/src/ScTriggerInteraction.cpp
        source/simulationcontroller/src/ScVisualize.cpp
        source/task/src/TaskManager.cpp
        ${PLATFORM_SPECIFIC_SOURCES}
)

target_link_libraries(PhysX PRIVATE
)

# TODO: Many of these function as their own sub-packages. This should be split into a cmakelists for each package
target_include_directories(PhysX PRIVATE
        include
        source/common/include
        source/common/src
        source/filebuf/include
        source/geomutils/include
        source/geomutils/src
        source/geomutils/src/ccd
        source/geomutils/src/common
        source/geomutils/src/contact
        source/geomutils/src/convex
        source/geomutils/src/cooking
        source/geomutils/src/distance
        source/geomutils/src/gjk
        source/geomutils/src/hf
        source/geomutils/src/intersection
        source/geomutils/src/mesh
        source/geomutils/src/pcm
        source/geomutils/src/sweep
        source/lowlevel/api/include
        source/lowlevel/common/include/collision
        source/lowlevel/common/include/pipeline
        source/lowlevel/common/include/utils
        source/lowlevel/software/include
        source/lowlevelaabb/include
        source/lowleveldynamics/include
        source/lowleveldynamics/shared
        source/physx/src
        source/physx/src/device
        source/physxextensions/src
        source/physxextensions/src/serialization/Binary
        source/physxextensions/src/serialization/File
        source/physxextensions/src/serialization/Xml
        source/physxgpu/include
        source/physxmetadata/core/include
        source/physxmetadata/extensions/include
        source/physxvehicle/src
        source/physxvehicle/src/physxmetadata/include
        source/pvd/include
        source/scenequery/include
        source/scenequery/include
        source/simulationcontroller/include
        source/simulationcontroller/src
)

set(PLATFORM_SPECIFIC_DEFINITIONS "")
if (CMAKE_SYSTEM_NAME MATCHES Windows)
    set(PLATFORM_SPECIFIC_DEFINITONS
            PX_SIMD_DISABLED
    )

    message(WARNING "Windows does not support PhysX SIMD acceleration")
endif ()

if (CMAKE_BUILD_TYPE MATCHES Debug)
    target_compile_definitions(PhysX PRIVATE
            _DEBUG
            DISABLE_CUDA_PHYSX
            PX_PUBLIC_RELEASE=1
            PX_SUPPORT_OMNI_PVD=0
            PX_SUPPORT_PVD=1
            PX_PHYSX_STATIC_LIB
            PX_CHECKED=1
            ${PLATFORM_SPECIFIC_DEFINITIONS}
    )
else ()
    target_compile_definitions(PhysX PRIVATE
            NDEBUG
            DISABLE_CUDA_PHYSX
            PX_PUBLIC_RELEASE=1
            PX_SUPPORT_OMNI_PVD=0
            PX_SUPPORT_PVD=0
            PX_PHYSX_STATIC_LIB
            ${PLATFORM_SPECIFIC_DEFINITIONS}
    )
endif ()

target_compile_options(PhysX PRIVATE
        -Wno-invalid-offsetof
)
